--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "concurrently": "^6.0.2",
     "eslint": "^7.24.0",
     "eslint-config-google": "^0.14.0"
-  }
+  },
+    "engines": {
+      "node": "14.15.3",
+      "npm": "6.14.8"
+    }
 }
