--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
       "react-app/jest"
     ]
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -48,5 +47,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "14.15.3",
+    "npm": "6.14.8"
+  }
 }
